Fix crawler error setting bad proxy URL on Mascot settings from Admin Console
Misc code cleanup, all auto-generated refactors compliments of IntelliJ